# $Id$

2007-02-09	Konstantin V. Arkhipov

	* main/Flow/: MonolithicEditor backported from trunk; also fixed
	SaveCommand logic.

2007-02-09	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveImage.class.php: fix return value.

2007-02-07	Denis M. Gabaidulin

	* core/OSQL/SelectQuery.class.php: having clause support was added.

2007-02-06	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveIdentifierList.class.php: list of
	identificable objects primitive was added.

2007-02-02	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: min/max values
	added to identifier's too.

2007-01-31	Dmitry E. Demidov

	* main/Utils/ClassUtils.class.php: added class for copy 
	object properties.

2007-01-31	Konstantin V. Arkhipov

	* meta/types/: min/max values for SmallInteger/Integer primitives.

2007-01-29	Dmitry E. Demidov

	* main/Utils/RussianTextUtils.class.php: added method getDateAsText.

2007-01-25	Dmitry E. Demidov

	* main/core/Form/FormUtils.class.php: form2object() and object2form()
	now accepts any objects.

2007-01-23	Dmitry E. Demidov

	* main/Utils/DaoMoveHelper.class.php: added new class for easy moving
	up/down DAOConnected objects.

	* main/Utils/DaoUtils.class.php: added customizable null value.

2007-01-22	Konstantin V. Arkhipov

	* main/DAOs/Handlers/MessageSegmentHandler.class.php,
	main/DAOs/Handlers/SharedMemorySegmentHandler.class.php:
	segments/queues are now created with 0660 permission, instead of 0600.

2007-01-19	Konstantin V. Arkhipov

	* main/DAOs/Handlers/MessageSegmentHandler.class.php,
	main/DAOs/Workers/DelayedDaoWorker.class.php: sysvmsg-based
	asynchronous DAO-worker, arrived from trunk.

2007-01-12	Nickolay G. Korolyov

	* main/Utils/DaoUtils.class.php: shiny new class introduced.

2007-01-11	Konstantin V. Arkhipov

	* core/DB/ImaginaryDialect.class.php: missing toString added to
	fullTextSearch()/fullTextRank().

2007-01-08	Konstantin V. Arkhipov

	* 0.8.4 released.

2007-01-06	Konstantin V. Arkhipov
